--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,8 @@ SRCS = ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strrchr.c ft_strnstr.c ft_strncm
 		ft_printf/print_p.c\
 		ft_printf/print_xX.c\
 		ft_printf/put_num_dx.c\
-		ft_strjoin_with_free.c
+		ft_strjoin_with_free.c \
+		ft_strjoin_with_free_no_null.c
 OBJS = $(SRCS:%.c=%.o)
 
 all: $(NAME)
