--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,8 @@
 NAME = debug.a
 CC = gcc
 CFLAGS = #-Wall -Wextra -Werror
-INCLUDE = -I ../include
+LDFLAGS = -lreadline -lhistory -L$(shell brew --prefix readline)/lib
+INCLUDE = -I ../include -I$(shell brew --prefix readline)/include -Iinclude
 SRCS = debug.c
 OBJS = $(SRCS:%.c=%.o)
 
@@ -9,12 +10,16 @@ all: $(NAME)
 
 $(NAME): $(OBJS)
 	ar rc $(NAME) $(OBJS)
+
 %.o:%.c
 	$(CC) $(CFLAGS) $(INCLUDE) $(HEADER) -o $@ -c $<
+
 clean:
 	rm -f $(OBJS)
+
 fclean: clean
 	rm -f $(NAME)
+
 re: fclean all
 
 .PHONY: all clean fclean re
