--- a/libft/Makefile
+++ b/libft/Makefile
@@ -21,7 +21,8 @@ SRCS = ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strrchr.c ft_strnstr.c ft_strncm
 		ft_printf/put_num_dx.c\
 		ft_strjoin_with_free.c \
 		ft_strjoin_with_free_no_null.c \
-		ft_split_triple.c
+		ft_split_triple.c \
+		ft_strcmp.c
 OBJS = $(SRCS:%.c=%.o)
 
 all: $(NAME)
