--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -2,6 +2,7 @@ NAME	:= libutl.a
 CC		:= gcc
 CFLAGS	:= -Wall -Wextra -Werror
 HEADER	:= -I../../include -I../../libft
+LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
 SRCS	:= free.c here_doc.c redirect.c set_exit_status.c signal.c utils.c
 OBJS	:= $(SRCS:%.c=%.o)
 
@@ -11,7 +12,7 @@ $(NAME): $(OBJS)
 	ar rc $(NAME) $(OBJS)
 
 %.o:%.c
-	$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
+	$(CC) $(CFLAGS) $(HEADER) $(LDFLAGS) -o $@ -c $<
 
 clean:
 	rm -f $(OBJS)
