fix: modified src/utils/Makefile

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -1,7 +1,7 @@
 NAME	:= libutl.a
 CC		:= gcc
 CFLAGS	:= -Wall -Wextra -Werror
-HEADER	:= -I../../include -I../../libft
+HEADER	:= -I../../include -I../../libft -I$(shell brew --prefix readline)/include
 LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
 SRCS	:= free.c here_doc.c redirect.c set_exit_status.c signal.c utils.c
 OBJS	:= $(SRCS:%.c=%.o)
@@ -9,10 +9,10 @@ OBJS	:= $(SRCS:%.c=%.o)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	ar rc $(NAME) $(OBJS)
+	ar rc $(NAME) $(OBJS) $(LDFLAGS)
 
 %.o:%.c
-	$(CC) $(CFLAGS) $(HEADER) $(LDFLAGS) -o $@ -c $<
+	$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
 
 clean:
 	rm -f $(OBJS)
