--- a/src/lexar/Makefile
+++ b/src/lexar/Makefile
@@ -4,11 +4,12 @@ CFLAGS	:= -Wall -Wextra -Werror
 HEADER	:= -I../../include -I../../libft
 SRCS	:= tokenize.c
 OBJS	:= $(SRCS:%.c=%.o)
+LIBFT = ../../libft/libft.a
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	ar rc $(NAME) $(OBJS)
+$(NAME): $(OBJS) $(LIBFT)
+	ar rc $(NAME) $(OBJS)  $(LIBFT)
 
 %.o:%.c
 	$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
