--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -5,11 +5,12 @@ HEADER	:= -I../../include -I../../libft -I$(shell brew --prefix readline)/includ
 LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
 SRCS	:= free.c here_doc.c redirect.c set_exit_status.c signal.c utils.c error.c
 OBJS	:= $(SRCS:%.c=%.o)
+LIBFT = ../../libft/libft.a
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	ar rc $(NAME) $(OBJS) $(LDFLAGS)
+$(NAME): $(OBJS) $(LIBFT)
+	ar rc $(NAME) $(OBJS) $(LIBFT) $(LDFLAGS)
 
 %.o:%.c
 	$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
