--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -2,7 +2,7 @@ NAME = libex.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 INCLUDE = -I ../../include/
-SRCS = built_in_command.c create_t_command.c exec.c
+SRCS = built_in_command.c create_t_command.c exec.c exec_utils.c
 OBJS = $(SRCS:%.c=%.o)
 
 LIBFT = ../../libft/libft.a
