--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -4,13 +4,14 @@ CFLAGS = -Wall -Wextra -Werror
 INCLUDE = -I ../../include/
 SRCS = built_in_command.c create_t_command.c exec.c exec_utils.c
 OBJS = $(SRCS:%.c=%.o)
+OBJS	:= $(addprefix obj/, $(OBJS))
 
 LIBFT = ../../libft/libft.a
 all: $(NAME)
 
 $(NAME): $(OBJS) $(LIBFT)
 	ar rc $(NAME) $(OBJS) $(LIBFT)
-%.o:%.c
+obj/%.o:%.c
 	$(CC) $(CFLAGS) $(INCLUDE) -o $@ -c $<
 clean:
 	rm -f $(OBJS)
