--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -5,6 +5,7 @@ HEADER	:= -I../../include -I../../libft -I$(shell brew --prefix readline)/includ
 LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
 SRCS	:= free.c here_doc.c redirect.c set_exit_status.c signal.c utils.c error.c
 OBJS	:= $(SRCS:%.c=%.o)
+OBJS	:= $(addprefix obj/, $(OBJS))
 LIBFT = ../../libft/libft.a
 
 all: $(NAME)
@@ -12,7 +13,7 @@ all: $(NAME)
 $(NAME): $(OBJS) $(LIBFT)
 	ar rc $(NAME) $(OBJS) $(LIBFT) $(LDFLAGS)
 
-%.o:%.c
+obj/%.o:%.c
 	$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
 
 clean:
