--- a/src/builtin/Makefile
+++ b/src/builtin/Makefile
@@ -5,7 +5,8 @@ HEADER	:= -I../../include -I../../libft
 SRCS	:= \
 builtin_utils.c    env.c              exit.c             my_getenv.c	\
 cd.c               envvar_utils_1.c   export.c           pwd.c			\
-echo.c             envvar_utils_2.c   inherite_env_val.c unset.c
+echo.c             envvar_utils_2.c   inherite_env_val.c unset.c		\
+builtin_utils2.c
 OBJS	:= $(SRCS:%.c=%.o)
 OBJS	:= $(addprefix obj/, $(OBJS))
 LIBFT = ../../libft/libft.a
