add: free2.c (free char** var)

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -3,7 +3,10 @@ CC		:= gcc
 CFLAGS	:= -Wall -Wextra -Werror
 HEADER	:= -I../../include -I../../libft -I$(shell brew --prefix readline)/include
 LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
-SRCS	:= free.c here_doc.c redirect.c set_exit_status.c signal.c utils.c  utils2.c error.c
+SRCS	:= \
+error.c           here_doc.c        signal.c	\
+free1.c           redirect.c        utils.c		\
+free2.c           set_exit_status.c utils2.c
 OBJS	:= $(SRCS:%.c=%.o)
 OBJS	:= $(addprefix obj/, $(OBJS))
 LIBFT = ../../libft/libft.a
