--- a/libft/Makefile
+++ b/libft/Makefile
@@ -24,7 +24,8 @@ SRCS = ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strrchr.c ft_strnstr.c ft_strncm
 		ft_split_triple.c \
 		ft_strcmp.c \
 		ft_free.c \
-		is_str_all_c.c
+		is_str_all_c.c \
+		is_last_char_c.c
 OBJS = $(SRCS:%.c=%.o)
 
 all: $(NAME)
