add: increment shlvl

--- a/src/builtin/Makefile
+++ b/src/builtin/Makefile
@@ -3,10 +3,12 @@ CC		:= gcc
 CFLAGS	:= -Wall -Wextra -Werror
 HEADER	:= -I../../include -I../../libft
 SRCS	:= \
-builtin_utils.c            env.c                      export.c                   inherite_env_val.c	\
-builtin_utils2.c           envvar_utils_1.c           generate_environ.c         my_getenv.c		\
-cd.c                       envvar_utils_2.c           get_canonical_path.c       pwd.c				\
-echo.c                     exit.c                     get_resize_strs_with_str.c unset.c
+builtin_utils.c            envvar_utils_2.c           increment_shlvl.c	\
+builtin_utils2.c           exit.c                     inherite_env_val.c	\
+cd.c                       export.c                   my_getenv.c			\
+echo.c                     generate_environ.c         pwd.c					\
+env.c                      get_canonical_path.c       unset.c				\
+envvar_utils_1.c           get_resize_strs_with_str.c
 OBJS	:= $(SRCS:%.c=%.o)
 OBJS	:= $(addprefix obj/, $(OBJS))
 LIBFT = ../../libft/libft.a
