fix: split func

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -4,9 +4,10 @@ CFLAGS	:= -Wall -Wextra -Werror
 HEADER	:= -I../../include -I../../libft -I$(shell brew --prefix readline)/include
 LDFLAGS 	:= #-lreadline -lhistory -L$(shell brew --prefix readline)/lib
 SRCS	:= \
-error.c           here_doc.c        signal.c	\
-free1.c           redirect.c        utils.c		\
-free2.c           set_exit_status.c utils2.c
+error.c                  init_global_variable.c   signal.c\
+free1.c                  install_signal_handler.c utils.c\
+free2.c                  redirect.c               utils2.c\
+here_doc.c               set_exit_status.c
 OBJS	:= $(SRCS:%.c=%.o)
 OBJS	:= $(addprefix obj/, $(OBJS))
 LIBFT = ../../libft/libft.a
